[package]
name = "2Keys-ahk-executor"
version = "0.4.1"
authors = ["Kishan <kishansambhi@hotmail.co.uk>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "2Keys_ahk_executor"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
winapi = { version = "0.3.8", features = ["libloaderapi"] }
libloading = "0.5.2"
widestring = "0.2.2"	